add tagsPage, myProfile, myPostNav component; add css

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.profile_pict {
+    width: 48px;
+  }
+
+  .content_pict {
+    width: 98px;
+    height: 98px;
+  }
+  
