--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,16 +3,49 @@
 @tailwind utilities;
 
 .profile_pict {
-    width: 48px;
-  }
+  width: 48px;
+  height: 48px;
+  overflow: hidden;
+}
 
-  .content_pict {
-    width: 98px;
-    height: 98px;
-  }
-  
-  .content_pict_post {
-    width: 240px;
-    height: 240px;
-  }
-  
+.profile_pict img {
+  width: 100%;
+  height: 100%;
+  overflow:hidden;
+}
+
+.content_pict {
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+}
+
+.content_pict img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.content_pict_post {
+  width: 240px;
+  height: 240px;
+  overflow: hidden;
+}
+
+.content_pict_post img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.myProfile_pict {
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+}
+
+.myProfile_pict img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
