fix ui; limit text

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -49,3 +49,44 @@
   height: 100%;
   overflow: hidden;
 }
+
+/* .text-limit {
+  display: block;
+  position: relative;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  overflow: hidden;
+  max-height: 3.6em;
+  line-height: 1.8em;
+} */
+
+/* text-limit::after {
+  content: "...";
+  position: absolute;
+  right: -12px; 
+  bottom: 4px;
+} */
+
+.text-limit {
+  position: relative;
+  font-size: 14px;
+  color: black;
+  width: 100%; /* Could be anything you like. */
+}
+
+.text-limit-concat {
+  position: relative;
+  display: inline-block;
+  word-wrap: break-word;
+  overflow: hidden;
+  max-height: 2.4em; /* (Number of lines you want visible) * (line-height) */
+  line-height: 1.2em;
+  text-align:justify;
+}
+
+.text.ellipsis::after {
+  content: "...";
+  position: absolute;
+  right: -12px; 
+  bottom: 4px;
+}
